Setting up Spring Arm and Camera completely in C++

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/CrazyBallGame")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="CrazyBallGameGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/CrazyBallContent/Maps/Test_Level1.Test_Level1
+GameDefaultMap=/Game/CrazyBallContent/Maps/Test_Level1.Test_Level1
+
